# assistants

./: .gitignore  README.md  pyproject.toml  voice-assistant-edge-device-blog.md
cli/conf/: base.yaml
src/: main.py  model.py
src/cli/conf/: base.yaml
src/features/: memory.py  weather.py
tests/: interactive_llm_test.py  test_llm.py  weather.py
voice_assistant/: BLOG.md  index.html  logger.py  main.py  model.py  util.py
voice_assistant/cli/conf/: base.yaml
voice_assistant/features/: memory.py
