[project]
name = "assistants"
version = "0.1.0"
description = "A low-latency voice assistant that listens for commands and responds"
authors = [
    { name = "Vignesh Srinivasan", email = "vignesh.mssrinivasan@example.com" }
]

dependencies = [
    "fastapi==0.115.12",
    "fastrtc==0.0.26",
    "fastrtc_whisper_cpp==0.1.2",
    "gradio==5.33.1",
    "hydra-core==1.3.2",
    "numpy==2.2.0",
    "omegaconf==2.3.0",
    "uvicorn==0.34.3",
    "fastrtc[stt,vad,tts,stopword]",
    "llama-cpp-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[tool.setuptools]
packages = ["src"]  # Specify only the package(s) you want

[project.scripts]
assistant = "src.main:main"