[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistants"
version = "0.1.0"
description = "A low-latency voice assistant that listens for commands and responds"
authors = [
    { name = "Vignesh Srinivasan", email = "vignesh.mssrinivasan@example.com" }
]
dependencies = [
    "fastapi",
    "fastrtc_whisper_cpp",
    "gradio",
    "hydra-core",
    "numpy==2.2.0",
    "omegaconf",
    "uvicorn",
    "fastrtc>=0.0.26",
    "fastrtc[vad]",
    "fastrtc[stopword]",
    "llama-cpp-python",
    "torch==2.7.1+cpu",
    "soxr",
    "kokoro_onnx",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
packages = ["src"]  # Specify only the package(s) you want

[project.scripts]
assistant = "src.main:main"